--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div class="inner">
-            <h1>A Number Guesser</h1>
+            <h1>Number Guesser</h1>
             <p class="first-p">Guess a number between 1 and 10</p>
             <input type="text" placeholder=" Enter your guess..." class="main-input">
             <button type="submit" class="btn">SUBMIT</button>
